examples/fail/elgamal_std.zc
../all/elgamal_std.zc